namespace StreamingPlatform.Models.Enums
{
    /// <summary>
    /// Enum for Plan Status.
    /// </summary>
    public enum PlanStatus
    {
        /// <summary>
        /// Represents Active Plan
        /// </summary>
        Active,

        /// <summary>
        /// Represents Inactive Plan
        /// </summary>
        Inactive,
    }
}
