@startuml
'https://plantuml.com/class-diagram
skin rose
skinparam shadowing false
left to right direction

package Songs {
    class Song{
        - Guid songId
        - String songTitle
        - Guid artistId
        - TimeSpan duration
        - Guid? albumId
    }
}

package Playlists {
    class Playlist {
        - Guid playlistId
        - String playlistTitle
    }
}

package Albums {
    class Album {
        - Guid albumId
        - String albumTitle
        - Guid artistId
    }
}

package Users {
    class User {
        - Guid userId
        - String userName
        - String email
        - String password
        - String salt
        - Role roles
        - DateTime createdOn
    }

    enum Role {
        - String admin
        - String subscriber
        - String artist
    }
}

package Plans {
    class Plan{
        - Guid planId
        - PlanStatus status
        - Double monthlyFee
        - Int numberMinutes
    }

    enum PlanStatus {
        - String active
        - String inactive
    }
}

package Subscriptions {
    class Subscription {
        - Guid subscriptionId
        - Guid userId
        - Guid planId
        - Date createdOn
        - Date? renewDate
        - SubscriptionStatus status
    }

    enum SubscriptionStatus {
        - String active
        - String inactive
    }
}

Song "1..*" -- "1" Album
Song "1..*" -- "1..*" Playlist
Song "1..*" -- "1" User
Album "1..*" -- "1" User

User "1..*" -- "1" Role
User "1" -- "0..*" Playlist
User "1" -- "1" Subscription

Plan "1" -- "0..*" Subscription
Subscription "1..*" -- "1" SubscriptionStatus
Plan "1..*" -- "1" PlanStatus

@enduml